# async-from-sync-test

./: Cargo.toml  README.md
src/: main.rs
