[package]
name = "async-from-sync-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.tokio]
version = "1.19"
default-features = false
features = [
    "rt-multi-thread",
    "macros",
    "time"
]

